--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
   "dependencies": {
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
-    "@next/mdx": "^14.2.13",
+    "@next/mdx": "15.3.5",
     "@tailwindcss/typography": "^0.5.15",
     "@types/mdx": "^2.0.13",
     "clsx": "^2.1.1",
     "lucide-react": "^0.468.0",
     "motion": "^11.18.2",
-    "next": "15.1.1",
+    "next": "15.3.5",
     "next-themes": "^0.4.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-use-measure": "^2.1.7",
     "tailwind-merge": "^2.5.5"
   },
@@ -28,10 +28,10 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.0.0",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "19.1.8",
+    "@types/react-dom": "19.1.6",
     "eslint": "^9",
-    "eslint-config-next": "15.1.1",
+    "eslint-config-next": "15.3.5",
     "postcss": "^8",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.10",
