--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
     "prettier-plugin-tailwindcss": "^0.6.10",
     "tailwindcss": "^4.0.0",
     "typescript": "^5"
+  },
+  "resolutions": {
+    "@tailwindcss/oxide-linux-x64-gnu": "4.1.11"
   }
 }
